fix margin issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@
 }
 
 .top{
-    height: 50%;
+    height: 50dvh;
     position: relative;
 }
 
@@ -70,6 +70,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    row-gap: 15px;
 }
 
 .question{
@@ -189,5 +190,23 @@
 .play-again:hover{
     background-color: crimson;
     border-color: crimson;
+}
+
+@media (max-width: 600px) {
+  .moneyList {
+    padding: 0;
+  }
+
+  .moneyListItem {
+    justify-content: center;
+  }
+
+  .moneyListItemNumber {
+    padding-left: 5px;
+  }
+
+  .top {
+    height: 25dvh;
+  }
 }
 
